# gesture-control

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  spec-strategy.md
.codex/scripts/: install-seedpacespec-skills.ps1  quick_validate.py
config/: default.yaml
doc/: README.md  changelog.md
doc/agent/: coding-rules.md  context-index.md  known-issues.md  readme.md  subagent-rules.md  task-handoff.md  task-routing.md  todo-execution.md
doc/architecture/: module-map.md  overview.md  runtime-flow.md  tech-stack.md
doc/decisions/: 0001-doc-structure.md
doc/iterations/: 2026-05-05-i0-compatibility-baseline.md  2026-05-05-i0-cursor-followups-release.md  2026-05-05-i0-dry-run-manual-acceptance.md  2026-05-05-i0-manual-gesture-tuning.md  2026-05-05-i0-os-input-preflight.md  2026-05-05-i0-os-input-user-feedback.md  2026-05-05-initial-scaffold.md  2026-05-05-issue-todo-bootstrap.md  2026-05-05-phase1-runnable-harness.md  2026-05-05-phase2-gesture-mvp.md  2026-05-05-phase3-verification-handoff.md  2026-05-05-product-baseline.md  2026-05-05-technical-runtime-baseline.md  2026-05-05-todo-governance-upgrade.md  2026-05-05-v0.2-cursor-smoothness-implementation.md  2026-05-05-v0.2-cursor-smoothness-planning.md  2026-05-05-version-todo-reset.md  2026-05-05-versioned-todo-focus.md
gesture_control/: __init__.py  __main__.py  action_mapper.py  app.py  camera.py  cli.py  config.py  contracts.py  debug_overlay.py  gesture_engine.py  hotkeys.py  tracking.py
tests/: test_action_mapper.py  test_config.py  test_gesture_engine.py  test_macos_backend.py
(+74 files in other folders)
